launch single server

--- a/services/db_dolt/dockerfile
+++ b/services/db_dolt/dockerfile
@@ -14,4 +14,4 @@ RUN sh ./initialize.sh
 # execute dolt commands
 COPY ./services/db_dolt/config.yaml ./config.yaml
 ENTRYPOINT [ "dolt" ]
-CMD [ "sql-server", "--config", "./dolt.yaml" ]
+CMD [ "sql-server", "--config", "./config.yaml" ]
