change initialize method
dolt init -> dolt sql < *.sql

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3.3'
 
 services:
   db_dolt:
+    restart: always
     build:
       context: .
       dockerfile: ./services/db_dolt/dockerfile
